(library
 (name dream_paf)
 (public_name dream-paf)
 (modules dream_paf)
 (libraries faraday bigstringaf ke mimic))

(library
 (name alpn)
 (public_name dream-paf.alpn)
 (modules alpn)
 (libraries dream-paf dream-httpaf h2))

(library
 (name dream_paf_mirage)
 (public_name dream-paf.mirage)
 (modules dream_paf_mirage)
 (libraries paf tls-mirage mirage-time mirage-stack paf.alpn))

(library
 (name dream_paf_cohttp)
 (public_name dream-paf-cohttp)
 (modules dream_paf_cohttp)
 (libraries ipaddr domain-name dream-paf dream-httpaf cohttp-lwt))

(library
 (name le)
 (wrapped false)
 (public_name dream-paf-le)
 (modules lE)
 (libraries dream-httpaf dream-paf mirage-time mirage-stack duration tls-mirage emile
   letsencrypt))
